# color-representations

./: .gitignore  README.md  pyproject.toml  run.sh  steer_contrast.sh  steer_pred.sh
config/: config_dummy.yaml
config/gemma/: gemma.yaml
config/llama/: llama.yaml
notebooks/: viz.ipynb
notebooks/color_pca_results_/: top5_layers.json
scripts/: collect_activations.py  filter_to_single_token_colors.py  layerwise_pca.py  steer.py  synthetic.py
src/: config.py  steering_vector_utils.py  utils.py
src/colorep/: utils.py
src/colorrep/: config.py  steering_vector_utils.py
src/colorrep.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/dataset/: synthetic_dataset.py
src/experiments/: get_steering_vectors.py  steer_model.py  steer_model_contrast.py  steer_model_pred.py
src/managers/: model_manager.py  vector_manager.py
src/models/: base_model.py  gemma_2_9B.py  llama3_1_8B.py
src/vector_compute/: diff_in_means.py
